developerProject/force-app/main/default/objects/OJSERLIB__Application_Referee__c/OJSERLIB__Application_Referee__c.object-meta.xml
<CustomObject>
    <label>Application Referee</label>
    <nameField>
        <label>Application Referee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Referees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>