developerProject/force-app/main/default/objects/OJSERLIB__Application_Referee__c/fields/OJSERLIB__Accountant_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Accountant_Business_Name__c</fullName>
    <label>Accountant Business Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>