developerProject/force-app/main/default/objects/OJSERLIB__Application_Referee__c/fields/OJSERLIB__Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Contact_Name__c</fullName>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>