developerProject/force-app/main/default/objects/OJSERLIB__Application_Referee__c/fields/OJSERLIB__IsAuthority_to_contact_Account__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsAuthority_to_contact_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAuthority to contact Account</label>
    <type>Checkbox</type>
</CustomField>