developerProject/force-app/main/default/objects/OJSERLIB__Application_Referee__c/fields/OJSERLIB__Trade_Credit_Reference_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Trade_Credit_Reference_Name__c</fullName>
    <label>Trade/Credit Reference Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>