developerProject/force-app/main/default/objects/OJSERLIB__Application_Referee__c/fields/OJSERLIB__Trade_Credit_Reference_Phone__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Trade_Credit_Reference_Phone__c</fullName>
    <label>Trade/Credit Reference Phone</label>
    <type>Phone</type>
</CustomField>